todos stored in local storage

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Todo List</h1>
+      <h1 class="heading">Todo List</h1>
       <form>
         <div id="todo-div">
           <label for="todo">New Todo</label>
@@ -23,7 +23,7 @@
       </form>
 
       <ul id="list"></ul>
-      <button id="completed-btn">View completed Tasks</button>
+      <button id="completed-btn">View Number of  completed Tasks</button>
 
       <div id="completed-tasks"></div>
     </div>
