--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
         <div id="todo-div">
           <label for="todo">New Todo</label>
           <input type="text" id="todo" />
+          <input type="submit" value="Add Todo" class="btn" />
         </div>
-        <input type="submit" value="Add Todo" class="btn" />
       </form>
 
       <ul id="list"></ul>
-      <button id="completed-btn">View Number of  completed Tasks</button>
+      <button id="completed-btn">Click to see completed tasks</button>
 
       <div id="completed-tasks"></div>
     </div>
