--- a/todoList/index.html
+++ b/todoList/index.html
@@ -25,7 +25,8 @@
       <ul id="list"></ul>
       <button id="completed-btn">Click to see completed tasks</button>
 
-      <div id="completed-tasks"></div>
+      <div id="completed-tasks">
+      </div>
     </div>
 
     <script src="script.js"></script>
