fixed  the animations

--- a/todowithanimations/index.html
+++ b/todowithanimations/index.html
@@ -18,10 +18,11 @@
       <div class="form-control">
         <form class="submit">
           <input type="text" placeholder="Add Todo" class="text" />
+          <button>OK</button>
         </form>
-        <button>OK</button>
+      
       </div>
-      <span class="error"></span>
+      <span class="error">Input must not be empty</span>
       <div class="list-collection">
         <ul class="list-items"></ul>
       </div>
