moe style changes

--- a/HackerEscapeRoom/index.html
+++ b/HackerEscapeRoom/index.html
@@ -18,62 +18,61 @@
     <title>Hacker Escape Room</title>
   </head>
   <body>
-    <div class="main-container container">
-      <div class="sub-container">
-        <div class="nav-container container-fluid">
-          <nav class="navbar navbar-expand-lg">
-            <div class="navbar-main">
-              <a
-                class="navbar-brand d-flex align-items-lg-center text-white mx-2"
-                href="#"
-                ><img src="./images/logo.png" alt="logo" class="mx-lg-2" />
-                Hacker Escape Rooms</a
-              >
+    <div class="container">
+      <div class="nav-container container-fluid">
+        <nav class="navbar navbar-expand-lg">
+          <div class="navbar-main">
+            <a
+              class="navbar-brand d-flex align-items-lg-center text-white mx-2"
+              href="#"
+              ><img src="./images/logo.png" alt="logo" class="mx-lg-2" /> Hacker
+              Escape Rooms</a
+            >
 
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNav"
-                aria-controls="navbarNav"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
-              >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="#"
-                      >Play Online</a
-                    >
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Play on-site</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">The story</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link active" href="#">Contact us</a>
-                  </li>
-                </ul>
-              </div>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="#"
+                    >Play Online</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">Play on-site</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="#">The story</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" href="#">Contact us</a>
+                </li>
+              </ul>
             </div>
-          </nav>
-          <div class="hero-div">
-            <!-- <img
+          </div>
+        </nav>
+        <div class="hero-div">
+          <!-- <img
               src="./images/hero.jpg "
               alt="main-img"
               class="hero-img"
             /> -->
-            <div class="action-btn">
-              <button class="online-challenges">Online Challenges</button>
-              <button class="on-site-challenges">On-site Challenges</button>
-            </div>
+          <div class="action-btn">
+            <button class="online-challenges">Online Challenges</button>
+            <button class="on-site-challenges">On-site Challenges</button>
           </div>
         </div>
       </div>
+
       <div class="container reviews mt-5">
         <div class="row">
           <div class="col col-md-6 avatar-1">
@@ -83,7 +82,8 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
                 ad autem ab<br />
                 voluptatibus quis similique?<br /><small
-                  >John Doe,visited us in september 2021</small
+                  style="line-height: 21.09px"
+                  >John Doe,visited us in september <br />2021</small
                 >
               </p>
             </div>
@@ -95,7 +95,7 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis
                 ad autem ab<br />
                 voluptatibus quis similique?<br /><small
-                  >John Doe,visited us in september 2021</small
+                  >John Doe,visited us in september <br />2021</small
                 >
               </p>
             </div>
@@ -182,16 +182,18 @@
           <button class="my-5 btn-2">On-site Challenges</button>
         </div>
       </div>
-      <div class="container details text-center">
+      <div
+        class="container details d-flex flex-column align-items-center justify-content-center"
+      >
         <p class="text-white">
           Lorem ipsum dolor sit amet consectetur adipisicing elit,<br />
           Veritatis error accusamus sunt est! Ducimus voluptatibus<br />
           debitis neque distinctio impedit repellendus libero mollitia<br />
           non minus, obcaecati magni error quibusdam. Inventore.<br />
         </p>
-        <button class="mb-4">Read the ful story</button>
+        <button class="mt-2">Read the ful story</button>
       </div>
-      <div class="container playing-main" style="max-width: 1280px">
+      <div class="container playing-main bg-danger">
         <div class="playing d-flex">
           <div class="playing-imgs">
             <img
@@ -232,8 +234,11 @@
           </div>
         </div>
       </div>
-      <div class="container footer text-center" style="max-width: 1280px">
-        <div class="row pt-5">
+      <div
+        class="container footer text-center"
+        style="max-width: 1280px; min-height: 467px"
+      >
+        <div class="row pt-5 d-flex align-items-center justify-content-center">
           <div class="col col-sm-12 col-md-6 text-white text-center footer-div">
             <h5>[Esc] Hacker Escape Rooms</h5>
             <p>
