--- a/HackerEscapeRoom/index.html
+++ b/HackerEscapeRoom/index.html
@@ -19,15 +19,15 @@
   </head>
   <body>
     <div class="container">
-      <div class="nav-container container-fluid">
+      <div class="nav-container">
         <nav class="navbar navbar-expand-lg">
           <div class="navbar-main">
             <a
               class="navbar-brand d-flex align-items-lg-center text-white mx-2"
               href="#"
-              ><img src="./images/logo.png" alt="logo" class="mx-lg-2" /> Hacker
-              Escape Rooms</a
-            >
+              ><img src="./images/logo.png" alt="logo" class="mx-lg-2" />
+              <h1><span>Hacker</span><span>Escape</span> <span>Rooms</span></h1>
+            </a>
 
             <button
               class="navbar-toggler"
@@ -61,11 +61,6 @@
           </div>
         </nav>
         <div class="hero-div">
-          <!-- <img
-              src="./images/hero.jpg "
-              alt="main-img"
-              class="hero-img"
-            /> -->
           <div class="action-btn">
             <button class="online-challenges">Online Challenges</button>
             <button class="on-site-challenges">On-site Challenges</button>
@@ -105,7 +100,7 @@
       <div class="container challenges mt-5">
         <h1 class="text-center my-5">Popular Challenges right now</h1>
         <div class="row gx-0">
-          <div class="col col-md-4">
+          <div class="col col-sm-4 col-md-4">
             <div class="card room-info">
               <img src="./images/image 3.png" class="card-img-top" alt="..." />
               <div class="card-body">
@@ -128,7 +123,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-4">
+          <div class="col col-sm-4 col-md-4">
             <div class="card room-info">
               <img src="./images/image 3.png" class="card-img-top" alt="..." />
               <div class="card-body">
@@ -151,7 +146,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-md-4">
+          <div class="col col-sm-4 col-md-4">
             <div class="card room-info">
               <img src="./images/image 3.png" class="card-img-top" alt="..." />
               <div class="card-body">
@@ -193,7 +188,7 @@
         </p>
         <button class="mt-2">Read the ful story</button>
       </div>
-      <div class="container playing-main bg-danger">
+      <div class="container playing-main">
         <div class="playing d-flex">
           <div class="playing-imgs">
             <img
@@ -210,7 +205,7 @@
               culpa tempore repellat aperiam voluptatem quibusdam error
               necessitatibus. Architecto, sequi delectus.
             </p>
-            <a href="#" class="btn">See all challenges</a>
+            <a href="#" class="btn">Book on-site today</a>
           </div>
         </div>
         <div class="playing d-flex">
@@ -235,35 +230,31 @@
         </div>
       </div>
       <div
-        class="container footer text-center"
-        style="max-width: 1280px; min-height: 467px"
+        class="container footer"
+        style="max-width: 1280px; min-height: 467px; text-align: start"
       >
-        <div class="row pt-5 d-flex align-items-center justify-content-center">
-          <div class="col col-sm-12 col-md-6 text-white text-center footer-div">
-            <h5>[Esc] Hacker Escape Rooms</h5>
-            <p>
-              Lorem ipsum dolor sit amet consectetur <br />adipisicing elit.
-              Possimus officiis quam iste similique<br />
-              ad odio non molestiae. Expedita, ut eius.
-            </p>
-          </div>
-          <div
-            class="col col-sm-12 col-md-3 d-flex flex-column footer-link justify-content-lg-start"
-          >
-            <a href="">site map</a>
-            <a href="">The story</a>
-            <a href="">Contact us</a>
-            <a href="">Legal</a><br />
-            <a href="">Play online</a>
-            <a href="">Play on site</a>
-          </div>
-          <div class="col col-sm-12 col-md-3 footer-social">
-            <span class="text-white">Follow us on</span>
-            <div class="d-flex flex-column">
-              <a href="#">Facebook</a>
-              <a href="#">Instagram</a>
-              <a href="#">Twitter</a>
-            </div>
+        <div class="text-white footer-div pb-5">
+          <h5>[Esc] Hacker Escape Rooms</h5>
+          <p>
+            Lorem ipsum dolor sit amet consectetur <br />adipisicing elit.
+            Possimus officiis quam iste similique<br />
+            ad odio non molestiae. Expedita, ut eius.
+          </p>
+        </div>
+        <div class="d-flex flex-column footer-link">
+          <a href="">site map</a>
+          <a href="">The story</a>
+          <a href="">Contact us</a>
+          <a href="">Legal</a><br />
+          <a href="">Play online</a>
+          <a href="">Play on site</a>
+        </div>
+        <div class="footer-social pb-5">
+          <span class="text-white">Follow us on</span>
+          <div class="d-flex flex-column">
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
           </div>
         </div>
       </div>
