--- a/HackerEscapeRoom/index.html
+++ b/HackerEscapeRoom/index.html
@@ -100,7 +100,7 @@
       <div class="container challenges mt-5">
         <h1 class="text-center my-5">Popular Challenges right now</h1>
         <div class="row gx-0">
-          <div class="col col-sm-4 col-md-4">
+          <div class="col col-md-4">
             <div class="card room-info">
               <img src="./images/image 3.png" class="card-img-top" alt="..." />
               <div class="card-body">
@@ -123,7 +123,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-sm-4 col-md-4">
+          <div class="col col-md-4">
             <div class="card room-info">
               <img src="./images/image 3.png" class="card-img-top" alt="..." />
               <div class="card-body">
@@ -146,7 +146,7 @@
               </div>
             </div>
           </div>
-          <div class="col col-sm-4 col-md-4">
+          <div class="col col-md-4">
             <div class="card room-info">
               <img src="./images/image 3.png" class="card-img-top" alt="..." />
               <div class="card-body">
