fixed some styles

--- a/HackerEscapeRoom/index.html
+++ b/HackerEscapeRoom/index.html
@@ -83,7 +83,7 @@
               </p>
             </div>
           </div>
-          <div class="col col-md-6">
+          <div class="col col-md-6 avatar-2">
             <div class="avatar d-flex mt-5">
               <div><img src="./images/avatar.png" alt="" /></div>
               <p>
@@ -99,9 +99,9 @@
       </div>
       <div class="container challenges mt-5">
         <h1 class="text-center my-5">Popular Challenges right now</h1>
-        <div class="row gx-0">
+        <div class="row challenges-row gx-sm-2">
           <div class="col col-md-4">
-            <div class="card room-info">
+            <div class="card room-info room-info-1">
               <img src="./images/image 3.png" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Title of room(on-site)</h5>
@@ -124,7 +124,7 @@
             </div>
           </div>
           <div class="col col-md-4">
-            <div class="card room-info">
+            <div class="card room-info room-info-2">
               <img src="./images/image 3.png" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Title of room(on-site)</h5>
@@ -147,7 +147,7 @@
             </div>
           </div>
           <div class="col col-md-4">
-            <div class="card room-info">
+            <div class="card room-info room-info-3">
               <img src="./images/image 3.png" class="card-img-top" alt="..." />
               <div class="card-body">
                 <h5 class="card-title">Title of room(on-site)</h5>
@@ -186,14 +186,15 @@
           debitis neque distinctio impedit repellendus libero mollitia<br />
           non minus, obcaecati magni error quibusdam. Inventore.<br />
         </p>
-        <button class="mt-2">Read the ful story</button>
+        <button class="mt-2">Read the full story</button>
       </div>
       <div class="container playing-main">
         <div class="playing d-flex">
-          <div class="playing-imgs">
+          <div   class="playing-imgs">
             <img
               src="./images/nesa-by-makers-IgUR1iX0mqM-unsplash 1.png"
               alt=""
+            
             />
           </div>
           <div class="playing-details">
@@ -224,7 +225,7 @@
             <img
               src="./images/kelly-sikkema-YK0HPwWDJ1I-unsplash 1.png"
               alt=""
-              class="play-img-2"
+              
             />
           </div>
         </div>
