--- a/HackerEscapeRoom/index.html
+++ b/HackerEscapeRoom/index.html
@@ -29,18 +29,13 @@
               <h1><span>Hacker</span><span>Escape</span> <span>Rooms</span></h1>
             </a>
 
-            <button
-              class="navbar-toggler"
-              type="button"
-              data-bs-toggle="collapse"
-              data-bs-target="#navbarNav"
-              aria-controls="navbarNav"
-              aria-expanded="false"
-              aria-label="Toggle navigation"
-            >
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div id="hamburger-icon">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+            </div>
+
+            <div class="navbarNav" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item">
                   <a class="nav-link" aria-current="page" href="#"
@@ -190,11 +185,10 @@
       </div>
       <div class="container playing-main">
         <div class="playing d-flex">
-          <div   class="playing-imgs">
+          <div class="playing-imgs">
             <img
               src="./images/nesa-by-makers-IgUR1iX0mqM-unsplash 1.png"
               alt=""
-            
             />
           </div>
           <div class="playing-details">
@@ -225,7 +219,6 @@
             <img
               src="./images/kelly-sikkema-YK0HPwWDJ1I-unsplash 1.png"
               alt=""
-              
             />
           </div>
         </div>
