--- a/HackerEscapeRoom/index.html
+++ b/HackerEscapeRoom/index.html
@@ -18,48 +18,56 @@
     <title>Hacker Escape Room</title>
   </head>
   <body>
-    <div class="container">
-      <div class="nav-container">
-        <nav class="navbar navbar-expand-lg">
-          <div class="navbar-main">
-            <a
-              class="navbar-brand d-flex align-items-lg-center text-white mx-2"
-              href="#"
-              ><img src="./images/logo.png" alt="logo" class="mx-lg-2" />
-              <h1><span>Hacker</span><span>Escape</span> <span>Rooms</span></h1>
-            </a>
-
-            <div id="hamburger-icon">
-              <div class="bar1"></div>
-              <div class="bar2"></div>
-              <div class="bar3"></div>
-            </div>
-
-            <div class="navbarNav" id="navbarNav">
-              <ul class="navbar-nav">
-                <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="#"
-                    >Play Online</a
-                  >
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Play on-site</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">The story</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" href="#">Contact us</a>
-                </li>
-              </ul>
-            </div>
+    <div class="container main-container">
+      <header>
+        <div class="navbar-main pt-3">
+          <a><img src="./images/logo.png" alt="logo" class="mx-lg-2" /> </a>
+          <h1 class="hacker">Hacker Escape Rooms</h1>
+          <div id="hamburger-icon">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
           </div>
-        </nav>
-        <div class="hero-div">
-          <div class="action-btn">
-            <button class="online-challenges">Online Challenges</button>
-            <button class="on-site-challenges">On-site Challenges</button>
-          </div>
+        </div>
+      </header>
+      <nav class="nav-list desktop-nav">
+        <ul class="nav-links">
+          <li>
+            <a href="#">Play Online</a>
+          </li>
+          <li>
+            <a href="#">Play on-site</a>
+          </li>
+          <li>
+            <a href="#">The story</a>
+          </li>
+          <li>
+            <a class="active" href="#">Contact us</a>
+          </li>
+        </ul>
+      </nav>
+      <nav class="nav-menu">
+        
+        <i class="fa-solid fa-xmark fa-2x"></i>
+        <ul class="nav-mobile-links">
+          <li>
+            <a href="#">Play Online</a>
+          </li>
+          <li>
+            <a href="#">Play on-site</a>
+          </li>
+          <li>
+            <a href="#">The story</a>
+          </li>
+          <li>
+            <a class="active" href="#">Contact us</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="hero-div">
+        <div class="action-btn">
+          <button class="online-challenges">Online Challenges</button>
+          <button class="on-site-challenges">On-site Challenges</button>
         </div>
       </div>
 
