--- a/htmlForms/index.html
+++ b/htmlForms/index.html
@@ -14,7 +14,7 @@
     <title>Register user</title>
   </head>
   <body>
-    <div class="container mt-2">
+    <div class="container mt-4">
       <form>
         <h1 class="heading text-center mt-4">Register</h1>
         <div class="mb-3 form-group">
@@ -37,7 +37,7 @@
           <input type="password" class="form-control" id="password" />
           <small class="error">error</small>
         </div>
-        <div class="login">Already a member? <a href="login.html">Sign in</a></div>
+        <div class="login my-3">Already a member? <a href="login.html">Sign in</a></div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
