--- a/htmlForms/login.html
+++ b/htmlForms/login.html
@@ -14,7 +14,7 @@
     <title>login</title>
   </head>
   <body>
-    <div class="container mt-2">
+    <div class="container mt-4">
       <form>
         <h1 class="heading text-center mt-4">Login</h1>
 
@@ -33,7 +33,9 @@
           <input type="password" class="form-control" id="password" />
           <small class="error">error</small>
         </div>
-        <div class="login">Not a member? <a href="index.html">Register</a></div>
+        <div class="login my-3">
+          Not a member? <a href="index.html">Register</a>
+        </div>
         <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </div>
