--- a/wordie/index.html
+++ b/wordie/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Wordie</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div class="container">
+        <h1>Word Guess</h1>
+  <h3 class="secret-word"></h3>
+
+  <input type="text" class="guessed-word" placeholder="Enter a valid word">
+  <div class="buttons">
+    <button class="refresh">Refresh Word</button>
+    <button class="check">Check Word</button>
+  </div>
+
+    </div>
 
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
