--- a/wordie/index.html
+++ b/wordie/index.html
@@ -13,6 +13,8 @@
   <h3 class="secret-word"></h3>
 
   <input type="text" class="guessed-word" placeholder="Enter a valid word">
+
+  <span class="msg"></span>
   <div class="buttons">
     <button class="refresh">Refresh Word</button>
     <button class="check">Check Word</button>
