wrong words pushed to array

--- a/wordie/index.html
+++ b/wordie/index.html
@@ -12,9 +12,10 @@
         <h1>Word Guess</h1>
   <h3 class="secret-word"></h3>
 
-  <input type="text" class="guessed-word" placeholder="Enter a valid word">
+  <input type="text" class="guessed-word" placeholder="Enter a valid word" maxlength="5">
 
   <span class="msg"></span>
+  <p class="result-summary">Wrong letters :<span></span></p>
   <div class="buttons">
     <button class="refresh">Refresh Word</button>
     <button class="check">Check Word</button>
