--- a/wordie/index.html
+++ b/wordie/index.html
@@ -9,18 +9,23 @@
   </head>
   <body>
     <div class="container">
-        <h1>Word Guess</h1>
-  <h3 class="secret-word"></h3>
+      <h1>Word Guess</h1>
+      <h3 class="secret-word"></h3>
 
-  <input type="text" class="guessed-word" placeholder="Enter a valid word" maxlength="5">
+      <input
+        type="text"
+        class="guessed-word"
+        placeholder="Enter a valid word"
+        maxlength="5"
+      />
 
-  <span class="msg"></span>
-  <p class="result-summary">Wrong letters :<span></span></p>
-  <div class="buttons">
-    <button class="refresh">Refresh Word</button>
-    <button class="check">Check Word</button>
-  </div>
+      <div class="buttons">
+        <button class="refresh">Refresh Word</button>
+        <button class="check">Check Word</button>
+      </div>
 
+      <p class="msg"></p>
+      <p class="result-summary">Word Details :<span></span></p>
     </div>
 
     <script src="script.js"></script>
