code refactoring and test

--- a/wordie/index.html
+++ b/wordie/index.html
@@ -28,6 +28,8 @@
       <p class="result-summary">Word Details :<span></span></p>
     </div>
 
-    <script src="script.js"></script>
+    <!--    <script src="script.js" type="module"></script> -->
+    <script src="app.js" type="module"></script>
   </body>
 </html>
+s
