--- a/wordie/index.html
+++ b/wordie/index.html
@@ -25,7 +25,7 @@
       </div>
 
       <p class="msg"></p>
-      <p class="result-summary">Word Details :<span></span></p>
+      <div class="result-summary">Word Details:</div>
     </div>
 
     <script src="app.js" type="module"></script>
